[gd_scene load_steps=30 format=3 uid="uid://bxwoyrax2hte6"]

[ext_resource type="Script" uid="uid://ccmsl3hn6pt17" path="res://Script/Component/state_machine.gd" id="1_12xx7"]
[ext_resource type="Texture2D" uid="uid://pj2fyjf7r1v7" path="res://Asset/Enemy/Tataka/Tataka.png" id="1_ackai"]
[ext_resource type="Script" uid="uid://dpu1rvh2a3opo" path="res://Script/Enemy/Tataka/tataka.gd" id="1_wqcs2"]
[ext_resource type="Script" uid="uid://c4l8sec3np3t0" path="res://Script/Enemy/Tataka/tataka_idle_state.gd" id="3_wqcs2"]
[ext_resource type="Script" uid="uid://cntvbtb68f06v" path="res://Script/Enemy/Tataka/tataka_walk_state.gd" id="4_1i751"]
[ext_resource type="Script" uid="uid://cui12wqogwy1b" path="res://Script/Enemy/Tataka/tataka_jump_state.gd" id="4_d6qmf"]
[ext_resource type="Script" uid="uid://cyks5cci2ad5c" path="res://Script/Enemy/Tataka/tataka_air_state.gd" id="5_pa2j6"]
[ext_resource type="Script" uid="uid://ia62b610oebn" path="res://Script/Enemy/Tataka/tataka_stomp_state.gd" id="6_5qypi"]
[ext_resource type="Script" uid="uid://b127mmqd0m730" path="res://Script/Enemy/Tataka/tataka_throw_state.gd" id="7_3c71h"]
[ext_resource type="Script" uid="uid://cbtv2trmiqv12" path="res://Script/Enemy/Tataka/tataka_death_state.gd" id="8_kf1x2"]
[ext_resource type="Script" uid="uid://dlxenxeltbjsh" path="res://Script/Component/health_component.gd" id="10_3htwu"]
[ext_resource type="Texture2D" uid="uid://dp2mvsdw3lca5" path="res://Asset/GUI/health_bar.png" id="10_hr008"]
[ext_resource type="Script" uid="uid://bb77m4wl0jll4" path="res://Script/Component/healthbox_component.gd" id="11_1i751"]
[ext_resource type="Script" uid="uid://c0iiccrnxgt4y" path="res://Script/Component/bar_texture.gd" id="11_bloxk"]
[ext_resource type="Script" uid="uid://bxit1feq0lsq" path="res://Script/Component/hitbox_component.gd" id="12_t5c8o"]
[ext_resource type="Script" uid="uid://bsqrlaath6rv7" path="res://Script/Component/attack.gd" id="13_3htwu"]
[ext_resource type="Texture2D" uid="uid://c4cdfahyhk4pj" path="res://Asset/Enemy/Tataka/tataka_stomp.png" id="15_t5c8o"]

[sub_resource type="Animation" id="Animation_mne55"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/StompSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_bloxk"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}

[sub_resource type="Animation" id="Animation_r8s14"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_hr008"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}

[sub_resource type="Animation" id="Animation_6tfqf"]
resource_name = "stomp"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitboxComponent/StompSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 4, 0, 1, 2, 3, 4, 5, 6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 0.85),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_pig0p"]
resource_name = "throw"
length = 0.9
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 30, 31]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"throw_rock"
}]
}

[sub_resource type="Animation" id="Animation_ijkhy"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_12xx7"]
_data = {
&"RESET": SubResource("Animation_mne55"),
&"fall": SubResource("Animation_bloxk"),
&"idle": SubResource("Animation_r8s14"),
&"jump": SubResource("Animation_hr008"),
&"stomp": SubResource("Animation_6tfqf"),
&"throw": SubResource("Animation_pig0p"),
&"walk": SubResource("Animation_ijkhy")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1i751"]
radius = 8.0
height = 26.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kf1x2"]
radius = 8.0
height = 26.0

[sub_resource type="Resource" id="Resource_1i751"]
script = ExtResource("13_3htwu")
attack_damage = 25.0
knockback_force = 400.0
metadata/_custom_type_script = "uid://bsqrlaath6rv7"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3htwu"]
radius = 5.0
height = 32.0

[node name="Tataka" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 4
script = ExtResource("1_wqcs2")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("1_12xx7")
initial_state = NodePath("Idle")
metadata/_custom_type_script = "uid://ccmsl3hn6pt17"

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("3_wqcs2")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://b1jva2771eefy"

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("4_1i751")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://r47mtyftfjkp"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("4_d6qmf")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://r47mtyftfjkp"

[node name="Air" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("5_pa2j6")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://r47mtyftfjkp"

[node name="Stomp" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("6_5qypi")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://r47mtyftfjkp"

[node name="Throw" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("7_3c71h")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://r47mtyftfjkp"

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("tataka")]
script = ExtResource("8_kf1x2")
tataka = NodePath("../..")
metadata/_custom_type_script = "uid://r47mtyftfjkp"

[node name="HealthBar" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.7907221, 0.41558614, 0, 1)
position = Vector2(-16, -21)
texture = ExtResource("10_hr008")
centered = false
region_enabled = true
region_rect = Rect2(0, 0, 32, 6)
script = ExtResource("11_bloxk")
metadata/_custom_type_script = "uid://c0iiccrnxgt4y"

[node name="Sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_ackai")
hframes = 6
vframes = 6
frame = 1

[node name="Animations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_12xx7")
}
autoplay = "idle"

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("death_state", "state_machine")]
unique_name_in_owner = true
script = ExtResource("10_3htwu")
MAX_HEALTH = 10
death_state = NodePath("../StateMachine/Death")
state_machine = NodePath("../StateMachine")
metadata/_custom_type_script = "uid://dlxenxeltbjsh"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("CapsuleShape2D_1i751")

[node name="HealthboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component")]
unique_name_in_owner = true
position = Vector2(0, 3)
collision_layer = 4
collision_mask = 0
script = ExtResource("11_1i751")
health_component = NodePath("../HealthComponent")
metadata/_custom_type_script = "uid://bb77m4wl0jll4"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthboxComponent"]
shape = SubResource("CapsuleShape2D_kf1x2")
debug_color = Color(5.2943824e-07, 0.64865994, 0.18360317, 0.41960785)

[node name="HitboxComponent" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, 4)
collision_layer = 0
collision_mask = 2
script = ExtResource("12_t5c8o")
attack = SubResource("Resource_1i751")
metadata/_custom_type_script = "uid://bxit1feq0lsq"

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(0, 7)
rotation = -1.5707964
shape = SubResource("CapsuleShape2D_3htwu")
disabled = true
debug_color = Color(0.9940278, 0, 0.23568305, 0.41960785)

[node name="StompSprite" type="Sprite2D" parent="HitboxComponent"]
position = Vector2(0, 8)
scale = Vector2(2, 2)
texture = ExtResource("15_t5c8o")
hframes = 7
frame = 6

[node name="LeftWalkRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 12)
target_position = Vector2(-25, 0)

[node name="RightWalkRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 12)
target_position = Vector2(25, 0)

[node name="RightLedgeRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(10, 12)
target_position = Vector2(0, 10)

[node name="LeftLedgeRay" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-10, 12)
target_position = Vector2(0, 10)

[node name="StompRayRight" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 12)
target_position = Vector2(16, 0)
collision_mask = 2

[node name="StompRayLeft" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 12)
target_position = Vector2(-16, 0)
collision_mask = 2
